--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -7,7 +7,7 @@
 
 body {
     background-color: #19a1ad;
-    height: calc(100vh -1px);
+    height: calc(100vh - 1px);
     display:flex;
     justify-content: center;
     align-items: center;
@@ -15,6 +15,7 @@ body {
 }
 
 .container {
+    position:relative;
     height: 375px;
     width: 325px;
     background-color:white;
@@ -23,16 +24,32 @@ body {
 }
 
 .div1 {
-    background-color: red;
-    height: 140px;
+    background-color: darkblue;
+    height: 145px;
     width: 100%;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
 .div2 {
-    background-color: green;
-    height: 145px;
+    height: 150px;
+    border-bottom: 1px solid lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .div3 {
-    background-color: yellow;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.container img {
+    background-color: white;
+    position: absolute;
+    z-index: 1;
+    top: 100px;
+    right: 116px;
+    border-radius: 100%;
+    padding: 5px;
 }
