--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
+:root {
+    --Darkcyan: hsl(185, 75%, 39%);
+    --Verydarkdesaturatedblue: hsl(229, 23%, 23%);
+    --Darkgrayishblue: hsl(227, 10%, 46%);
+    --Darkgray: hsl(0, 0%, 59%);
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #19a1ad;
+    background-color: var(--Darkcyan);
+    font-size: 18PX;
+    font-family: 'Kumbh Sans', sans-serif;
     height: calc(100vh - 1px);
     display:flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+h1 {
+    color: var(--Verydarkdesaturatedblue)
+}
+
+p {
+    color: var(--Darkgray);
 }
 
 .container {
@@ -32,7 +49,7 @@ body {
 }
 .div2 {
     height: 150px;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid var(--Darkgrayishblue);
     display: flex;
     align-items: center;
     justify-content: center;
